--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #00ffff;
+  background-color: #e3ebf7;
   color: #333;
   line-height: 1.5;
   transition: background-color 0.3s ease, color 0.3s ease;
