--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body.dark-mode .navbar {
 
 .hamburger {
   font-size: 2rem;
-  color: #ffd700;
+  color: #e3ebf7;
   background: none;
   border: none;
   cursor: pointer;
@@ -56,7 +56,7 @@ body.dark-mode .navbar {
   position: absolute;
   top: 15px;
   right: 20px;
-  background-color: #ffd700;
+  background-color: #e3ebf7;
   color: #000;
   border: none;
   width: 40px;
@@ -74,7 +74,7 @@ body.dark-mode .navbar {
 }
 
 .close-menu:hover {
-  background-color: #e6c200;
+  background-color: #e3ebf7;
 }
 
 .nav-menu {
